--- a/12 - Key Sequence Detection/index.html
+++ b/12 - Key Sequence Detection/index.html
@@ -3,22 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Key Detection</title>
-	<!-- <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script> -->
+	<script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 	<style>
 		body {
 			background-color: black;
 		}
-		h1, p {
+		.myHead, p {
 			color: white;
 			font-family: Helvetica, Arial, sans-serif;
 			text-align: center;
 		}
-		h1 {
+		.myHead {
 			margin: 0 100px;			
 			margin-top: 30%;
 			font-variant: small-caps;			
 		}
-		h1 em {
+		.myHead em {
 			color: #12B4E9;
 		}
 		p {
@@ -31,20 +31,22 @@
 </head>
 <body>
 	<div id="content">
-		<h1>Can You Figure Out the <em>Secret Code</em>?</h1>
+		<h1 class="myHead">Can You Figure Out the <em>Secret Code</em>?</h1>
 		<p>Hint: <span>'secretcode'</span></p>
 	</div>
 	<script>
 		pressed = [];
 		secretCode = 'secretcode';
+		
 		const contentDiv = document.querySelector('#content');
-		const secretContent = `<h1 class="secret">CONGRATULATIONS!!!</h1>
+		const secretContent = `<h1 class="myHead secret">CONGRATULATIONS!!!</h1>
 		<p class="secret">You're probably, like, a genius or something</p>`;
 
 		function keyinAround(e) {
 			pressed.push(e.key);
 			if (pressed.join('').includes(secretCode)) {
 				contentDiv.innerHTML = secretContent;
+				cornify_add();
 			}
 		}
 
