Day 11 - custom video player (play/pause & skip functionality)

--- a/12 - Key Sequence Detection/index.html
+++ b/12 - Key Sequence Detection/index.html
@@ -15,7 +15,7 @@
 		}
 		.myHead {
 			margin: 0 100px;			
-			margin-top: 30%;
+			margin-top: 30vh;
 			font-variant: small-caps;			
 		}
 		.myHead em {
@@ -37,9 +37,9 @@
 	<script>
 		pressed = [];
 		secretCode = 'secretcode';
-		
+
 		const contentDiv = document.querySelector('#content');
-		const secretContent = `<h1 class="myHead secret">CONGRATULATIONS!!!</h1>
+		const secretContent = `<h1 class="myHead secret"><em>CONGRATULATIONS!!!<em></h1>
 		<p class="secret">You're probably, like, a genius or something</p>`;
 
 		function keyinAround(e) {
